# Playcheck

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: version_matrix.sh
src/playcheck/: cli.py  model.py  parse.py  render.py  render_md.py  runner.py
src/playcheck/_ansible/callback_plugins/: playcheck_jsonl.py
testdata/: inventory-large.ini  inventory-unreachable.ini  inventory.ini  site.yml
tests/: test_cli.py  test_grouping.py  test_parse.py  test_render_md.py
tests/fixtures/: jsonl_output.jsonl
